cluster/apps/default/volsync/deployment.yaml
# a k8s yaml deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code
  template:
    metadata:
      labels:
        app: code
    spec:
      strategy:
        type: Recreate
      containers:
        - name: code
          image: ghcr.io/coder/code-server:4.20.1
          ports:
            - containerPort: 8080
              name: http
          workingDir: /data
          args:
            - --auth
            - "none"
            - --user-data-dir
            - "/data/.vscode"
            - --extensions-dir
            - "/data/.vscode"
            - /data
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: data
              mountPath: /data
      pod:
        securityContext:
          runAsUser: 568
          runAsGroup: 568
          fsGroup: 568
          fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: test-data
