cluster/apps/default/volsync/service.yaml
---
# k8s service file
apiVersion: v1
kind: Service
metadata:
  name: code
  namespace: default
spec:
  selector:
    app: code
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
